--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,1 +1,2 @@
 Plugins>NanoJ-LiveSRRF, "Frame-by-Frame Radiality", nanoj.liveSRRF.gui.SimpleRadiality_
+Plugins>NanoJ-LiveSRRF, "Quick 'n' Dirty", nanoj.liveSRRF.gui.DarkFrameCorrector_
