--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,5 +1,5 @@
 Plugins>NanoJ-LiveSRRF, "Frame-by-Frame Radiality", nanoj.liveSRRF.gui.SimpleRadiality_
-Plugins>NanoJ-LiveSRRF, "Frame-by-Frame Radiality Less Interp", nanoj.liveSRRF.gui.SimpleRadialityLessInterp_
+Plugins>NanoJ-LiveSRRF, "Calculate Radial-Gradient-Convergence", nanoj.liveSRRF.gui.RadialGradientConvergence_
 Plugins>NanoJ-LiveSRRF, "Quick 'n' Dirty", nanoj.liveSRRF.gui.DarkFrameCorrector_
 Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset from calibration dataset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 Plugins>NanoJ-LiveSRRF, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
