preparing LiveSRRF plugin that does entire SRRF reconstruction

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -2,3 +2,5 @@ Plugins>NanoJ-LiveSRRF, "Frame-by-Frame Radiality", nanoj.liveSRRF.gui.SimpleRad
 Plugins>NanoJ-LiveSRRF, "Calculate Radial-Gradient-Convergence", nanoj.liveSRRF.gui.RadialGradientConvergence_
 Plugins>NanoJ-LiveSRRF, "Quick 'n' Dirty", nanoj.liveSRRF.gui.DarkFrameCorrector_
 Plugins>NanoJ-LiveSRRF, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
+
+Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF_
