--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,6 +1,7 @@
-Plugins>NanoJ-LiveSRRF, "Frame-by-Frame Radiality", nanoj.liveSRRF.gui.SimpleRadiality_
-Plugins>NanoJ-LiveSRRF, "Calculate Radial-Gradient-Convergence", nanoj.liveSRRF.gui.RadialGradientConvergence_
-Plugins>NanoJ-LiveSRRF, "Quick 'n' Dirty", nanoj.liveSRRF.gui.DarkFrameCorrector_
-Plugins>NanoJ-LiveSRRF, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
+#Plugins>NanoJ-LiveSRRF, "Frame-by-Frame Radiality", nanoj.liveSRRF.gui.SimpleRadiality_
+#Plugins>NanoJ-LiveSRRF, "Calculate Radial-Gradient-Convergence", nanoj.liveSRRF.gui.RadialGradientConvergence_
+#Plugins>NanoJ-LiveSRRF, "Quick 'n' Dirty", nanoj.liveSRRF.gui.DarkFrameCorrector_
+#Plugins>NanoJ-LiveSRRF, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 
-Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF_
+#Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF_
+Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF2_
