--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,8 +1,13 @@
-Plugins>NanoJ-LiveSRRF, "Frame-by-Frame Radiality", nanoj.liveSRRF.gui.SimpleRadiality_
+Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF_
+
+Plugins>NanoJ-LiveSRRF, "-"
+Plugins>NanoJ-LiveSRRF>Tools, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
+Plugins>NanoJ-LiveSRRF>Tools, "Compare Gradient estimation", nanoj.liveSRRF.gui.CompareGradientEstimation_
+Plugins>NanoJ-LiveSRRF>Tools, "Frame-by-Frame Radiality", nanoj.liveSRRF.gui.SimpleRadiality_
+
+
+Plugins>NanoJ-LiveSRRF, "-"
 Plugins>NanoJ-LiveSRRF, "Calculate Radial-Gradient-Convergence", nanoj.liveSRRF.gui.RadialGradientConvergence_
 Plugins>NanoJ-LiveSRRF, "Quick 'n' Dirty", nanoj.liveSRRF.gui.DarkFrameCorrector_
-Plugins>NanoJ-LiveSRRF, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
-Plugins>NanoJ-LiveSRRF, "Compare Gradient estimation", nanoj.liveSRRF.gui.CompareGradientEstimation_
 
-Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF_
 
