--- a/src/plugins.config
+++ b/src/plugins.config
@@ -4,4 +4,4 @@
 #Plugins>NanoJ-LiveSRRF, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 
 Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF_
-Plugins>NanoJ-LiveSRRF, "LiveSRRF - SARF", nanoj.liveSRRF.gui.liveSRRF_optimised_
+Plugins>NanoJ-LiveSRRF, "LiveSRRF - optimized", nanoj.liveSRRF.gui.liveSRRF_optimised_
