--- a/src/plugins.config
+++ b/src/plugins.config
@@ -3,5 +3,6 @@
 #Plugins>NanoJ-LiveSRRF, "Quick 'n' Dirty", nanoj.liveSRRF.gui.DarkFrameCorrector_
 #Plugins>NanoJ-LiveSRRF, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 
-Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF_
+Plugins>NanoJ-LiveSRRF, "LiveSRRF - RH", nanoj.liveSRRF.gui.LiveSRRF_
 Plugins>NanoJ-LiveSRRF, "LiveSRRF - optimized", nanoj.liveSRRF.gui.liveSRRF_optimised_
+Plugins>NanoJ-LiveSRRF, "LiveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
