--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,8 +1,3 @@
-#Plugins>NanoJ-LiveSRRF, "Frame-by-Frame Radiality", nanoj.liveSRRF.gui.SimpleRadiality_
-#Plugins>NanoJ-LiveSRRF, "Calculate Radial-Gradient-Convergence", nanoj.liveSRRF.gui.RadialGradientConvergence_
-#Plugins>NanoJ-LiveSRRF, "Quick 'n' Dirty", nanoj.liveSRRF.gui.DarkFrameCorrector_
-#Plugins>NanoJ-LiveSRRF, "Calculate Gain & Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
-
-Plugins>NanoJ-LiveSRRF, "LiveSRRF - RH", nanoj.liveSRRF.gui.LiveSRRF_
-Plugins>NanoJ-LiveSRRF, "LiveSRRF - optimized", nanoj.liveSRRF.gui.liveSRRF_optimised_
-Plugins>NanoJ-LiveSRRF, "LiveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
+#Plugins>NanoJ-LiveSRRF, "liveSRRF - RH", nanoj.liveSRRF.gui.LiveSRRF_
+Plugins>NanoJ-LiveSRRF, "liveSRRF", nanoj.liveSRRF.gui.liveSRRF_optimised_
+#Plugins>NanoJ-LiveSRRF, "liveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
