--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,3 +1,5 @@
-Plugins>NanoJ-LiveSRRF, "liveSRRF - RH", nanoj.liveSRRF.gui.LiveSRRF_
+#Plugins>NanoJ-LiveSRRF, "liveSRRF - RH", nanoj.liveSRRF.gui.LiveSRRF_
 Plugins>NanoJ-LiveSRRF, "liveSRRF", nanoj.liveSRRF.gui.liveSRRF_optimised_
-Plugins>NanoJ-LiveSRRF, "liveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
+#Plugins>NanoJ-LiveSRRF, "liveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
+Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
+
