Advanced Settings GUI v0.1 (sort of works but not really)

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -2,5 +2,5 @@
 Plugins>NanoJ-LiveSRRF, "liveSRRF", nanoj.liveSRRF.gui.liveSRRF_optimised_
 #Plugins>NanoJ-LiveSRRF, "liveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
 #Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
-#Plugins>NanoJ-LiveSRRF, "liveSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
+Plugins>NanoJ-LiveSRRF, "liveSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
 
