Adding the Get OpenCL info tool

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -4,4 +4,5 @@ Plugins>NanoJ-LiveSRRF, "liveSRRF", nanoj.liveSRRF.gui.liveSRRF_optimised_
 #Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 Plugins>NanoJ-LiveSRRF, "liveSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
 Plugins>NanoJ-LiveSRRF>Tools, "Reset stack for display", nanoj.liveSRRF.gui.SetStackForDisplay_
-Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
+#Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
+Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinfo_
