--- a/src/plugins.config
+++ b/src/plugins.config
@@ -6,3 +6,4 @@ Plugins>NanoJ-LiveSRRF, "liveSRRF - Parameters sweep", nanoj.liveSRRF.gui.Parame
 Plugins>NanoJ-LiveSRRF>Tools, "Reset stack for display", nanoj.liveSRRF.gui.SetStackForDisplay_
 #Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
 Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinfo_
+Plugins>NanoJ-LiveSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRRF.gui.RemoveMacroPixelArtefacts_
