Added the Nearest neighbour analysis to the list of tools

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -7,3 +7,5 @@ Plugins>NanoJ-LiveSRRF>Tools, "Reset stack for display", nanoj.liveSRRF.gui.SetS
 Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
 Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinfo_
 Plugins>NanoJ-LiveSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRRF.gui.RemoveMacroPixelArtefacts_
+Plugins>NanoJ-LiveSRRF>Tools, "Nearest neighbour analysis", nanoj.liveSRRF.gui.NNAnalysis_
+
