Adding the Stack linear rescaling to the Tools list

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -8,4 +8,5 @@ Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.Simu
 Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinfo_
 Plugins>NanoJ-LiveSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRRF.gui.RemoveMacroPixelArtefacts_
 Plugins>NanoJ-LiveSRRF>Tools, "Localisation density analysis", nanoj.liveSRRF.gui.NNAnalysis_
+Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
 
