3D-SRRF calibration classes v0.1 (rotation does not work well and no axial calibration yet)

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -3,10 +3,19 @@ Plugins>NanoJ-LiveSRRF, "liveSRRF", nanoj.liveSRRF.gui.liveSRRF_optimised_
 #Plugins>NanoJ-LiveSRRF, "liveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
 #Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 Plugins>NanoJ-LiveSRRF, "liveSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
-Plugins>NanoJ-LiveSRRF>Tools, "Reset stack for display", nanoj.liveSRRF.gui.SetStackForDisplay_
-Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
+
+Plugins>NanoJ-LiveSRRF>Tools, "-"
 Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinfo_
+Plugins>NanoJ-LiveSRRF>Tools, "-"
+Plugins>NanoJ-LiveSRRF>Tools, "Reset stack for display", nanoj.liveSRRF.gui.SetStackForDisplay_
+Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
+Plugins>NanoJ-LiveSRRF>Tools, "-"
+Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
 Plugins>NanoJ-LiveSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRRF.gui.RemoveMacroPixelArtefacts_
 Plugins>NanoJ-LiveSRRF>Tools, "Localisation density analysis", nanoj.liveSRRF.gui.NNAnalysis_
-Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
+Plugins>NanoJ-LiveSRRF>Tools, "- 3D LiveSRRF - "
+#Plugins>NanoJ-LiveSRRF>Tools, "Get focus positions from MFM data", nanoj.liveSRRF.gui.GetDefocus_
+Plugins>NanoJ-LiveSRRF>Tools, "Get spatial registration from MFM data", nanoj.liveSRRF.gui.GetSpatialCalibrationMFMdata_
+Plugins>NanoJ-LiveSRRF>Tools, "Apply spatial registration to MFM data", nanoj.liveSRRF.gui.ApplyCalibrationMFMdata_
+Plugins>NanoJ-LiveSRRF>Tools, "Java Test", nanoj.liveSRRF.gui.JavaTest_
 
