3D-SRRF registration v0.7: fixing the intensity scaling estimation (using now a percentile of image intensities), added Infromation entropy but not using it as it's not working on volume beads

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -17,5 +17,5 @@ Plugins>NanoJ-LiveSRRF>Tools, "- 3D LiveSRRF - "
 #Plugins>NanoJ-LiveSRRF>Tools, "Get focus positions from MFM data", nanoj.liveSRRF.gui.GetDefocus_
 Plugins>NanoJ-LiveSRRF>Tools, "Get spatial registration from MFM data", nanoj.liveSRRF.gui.GetSpatialCalibrationMFMdata_
 Plugins>NanoJ-LiveSRRF>Tools, "Apply spatial registration to MFM data", nanoj.liveSRRF.gui.ApplyCalibrationMFMdata_
-Plugins>NanoJ-LiveSRRF>Tools, "Java Test", nanoj.liveSRRF.gui.JavaTest_
+Plugins>NanoJ-LiveSRRF>Tools, "Code test", nanoj.liveSRRF.gui.CodeTest_
 
