--- a/src/plugins.config
+++ b/src/plugins.config
@@ -10,4 +10,7 @@ Plugins>NanoJ-LiveSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRR
 Plugins>NanoJ-LiveSRRF>Tools, "Localisation density analysis", nanoj.liveSRRF.gui.NNAnalysis_
 Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
 Plugins>NanoJ-LiveSRRF>Tools, "Calculate SSIM", nanoj.liveSRRF.gui.EstimateSSIM_
+Plugins>NanoJ-LiveSRRF>Tools, "Simulate bead carpet", nanoj.liveSRRF.gui.BeadCarpetSimulator_
+Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInterpolation_
+
 
