Adding the 3D PSF extractor for the miCube (should be in Core?)

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -12,5 +12,7 @@ Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.Linea
 Plugins>NanoJ-LiveSRRF>Tools, "Calculate SSIM", nanoj.liveSRRF.gui.EstimateSSIM_
 Plugins>NanoJ-LiveSRRF>Tools, "Simulate bead carpet", nanoj.liveSRRF.gui.BeadCarpetSimulator_
 Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInterpolation_
+Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
+
 
 
