Adding the FHT interpolation tool, duplicated from the TimeConstantEstimation branch

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -9,4 +9,5 @@ Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinf
 Plugins>NanoJ-LiveSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRRF.gui.RemoveMacroPixelArtefacts_
 Plugins>NanoJ-LiveSRRF>Tools, "Localisation density analysis", nanoj.liveSRRF.gui.NNAnalysis_
 Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
+Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInterpolation_
 
