Adding the TimeConstantEstimation based on the optical flow magnitude

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -9,7 +9,7 @@ Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinf
 Plugins>NanoJ-LiveSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRRF.gui.RemoveMacroPixelArtefacts_
 Plugins>NanoJ-LiveSRRF>Tools, "Localisation density analysis", nanoj.liveSRRF.gui.NNAnalysis_
 Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
-Plugins>NanoJ-LiveSRRF>Tools, "Calculate SSIM", nanoj.liveSRRF.gui.EstimateSSIM_
+Plugins>NanoJ-LiveSRRF>Tools, "Estimate time constant", nanoj.liveSRRF.gui.EstimateTimeConstant_
 Plugins>NanoJ-LiveSRRF>Tools, "Simulate bead carpet", nanoj.liveSRRF.gui.BeadCarpetSimulator_
 Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInterpolation_
 Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
