--- a/src/plugins.config
+++ b/src/plugins.config
@@ -13,6 +13,7 @@ Plugins>NanoJ-LiveSRRF>Tools, "Estimate time constant", nanoj.liveSRRF.gui.Estim
 Plugins>NanoJ-LiveSRRF>Tools, "Simulate bead carpet", nanoj.liveSRRF.gui.BeadCarpetSimulator_
 Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInterpolation_
 Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
+Plugins>NanoJ-LiveSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
 
 
 
