Fluo simulator: complete with noise

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -14,6 +14,8 @@ Plugins>NanoJ-LiveSRRF>Tools, "Simulate bead carpet", nanoj.liveSRRF.gui.BeadCar
 Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInterpolation_
 Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
 Plugins>NanoJ-LiveSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
+Plugins>NanoJ-LiveSRRF>Tools, "Code tester", nanoj.liveSRRF.gui.CodeTester_
+
 
 
 
