Extract PSF and parameters --> include integrated Gaussian model

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -15,6 +15,7 @@ Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInt
 Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
 Plugins>NanoJ-LiveSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
 Plugins>NanoJ-LiveSRRF>Tools, "Code tester", nanoj.liveSRRF.gui.CodeTester_
+Plugins>NanoJ-LiveSRRF>Tools, "Estimate PSF size using integrated Gaussian", nanoj.liveSRRF.gui.EstimatePSFsize_
 
 
 
