--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,6 +1,4 @@
 Plugins>NanoJ-LiveSRRF, "liveSRRF", nanoj.liveSRRF.gui.LiveSRRF_optimised_
-#Plugins>NanoJ-LiveSRRF, "liveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
-#Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 Plugins>NanoJ-LiveSRRF, "liveSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
 
 Plugins>NanoJ-LiveSRRF>Tools, "-"
@@ -17,4 +15,8 @@ Plugins>NanoJ-LiveSRRF>Tools, "- 3D LiveSRRF - "
 Plugins>NanoJ-LiveSRRF>Tools, "Get spatial registration from MFM data", nanoj.liveSRRF.gui.GetSpatialCalibrationMFMdata_
 Plugins>NanoJ-LiveSRRF>Tools, "Apply spatial registration to MFM data", nanoj.liveSRRF.gui.ApplyCalibrationMFMdata_
 Plugins>NanoJ-LiveSRRF>Tools, "Code test", nanoj.liveSRRF.gui.CodeTest_
+Plugins>NanoJ-LiveSRRF>Tools, "Calculate 3D FHT (OpenCL)", nanoj.liveSRRF.gui.Get3DFHT_
+
+#Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
+
 
