Added files from TimeConstantEstimation

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -14,9 +14,12 @@ Plugins>NanoJ-LiveSRRF>Tools, "- 3D LiveSRRF - "
 #Plugins>NanoJ-LiveSRRF>Tools, "Get focus positions from MFM data", nanoj.liveSRRF.gui.GetDefocus_
 Plugins>NanoJ-LiveSRRF>Tools, "Get spatial registration from MFM data", nanoj.liveSRRF.gui.GetSpatialCalibrationMFMdata_
 Plugins>NanoJ-LiveSRRF>Tools, "Apply spatial registration to MFM data", nanoj.liveSRRF.gui.ApplyCalibrationMFMdata_
-Plugins>NanoJ-LiveSRRF>Tools, "Code test", nanoj.liveSRRF.gui.CodeTest_
 Plugins>NanoJ-LiveSRRF>Tools, "Calculate 3D FHT (OpenCL)", nanoj.liveSRRF.gui.Get3DFHT_
 
 #Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 
 
+Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
+Plugins>NanoJ-LiveSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
+Plugins>NanoJ-LiveSRRF>Tools, "Code tester", nanoj.liveSRRF.gui.CodeTester_
+Plugins>NanoJ-LiveSRRF>Tools, "Estimate PSF size using integrated Gaussian", nanoj.liveSRRF.gui.EstimatePSFsize_
