"v1.2d-fhi.13": migrating simulator and temporal analysis, fixed bug on simulator on using non-square GT images

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -11,3 +11,6 @@ Plugins>NanoJ-LiveSRRF>Tools, "Localisation density analysis", nanoj.liveSRRF.gu
 Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
 Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInterpolation_
 
+Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
+Plugins>NanoJ-LiveSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
+Plugins>NanoJ-LiveSRRF>Tools, "Estimate PSF size using integrated Gaussian", nanoj.liveSRRF.gui.EstimatePSFsize_
