--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,8 +1,8 @@
-#Plugins>NanoJ-LiveSRRF, "liveSRRF - RH", nanoj.liveSRRF.gui.LiveSRRF_
-Plugins>NanoJ-LiveSRRF, "liveSRRF", nanoj.liveSRRF.gui.LiveSRRF_optimised_
-#Plugins>NanoJ-LiveSRRF, "liveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
+#Plugins>NanoJ-LiveSRRF, "LiveSRRF - RH", nanoj.liveSRRF.gui.LiveSRRF_
+Plugins>NanoJ-LiveSRRF, "LiveSRRF", nanoj.liveSRRF.gui.LiveSRRF_optimised_
+#Plugins>NanoJ-LiveSRRF, "LiveSRRF - local gradient estimation", nanoj.liveSRRF.gui.LS_LGE_
 #Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
-Plugins>NanoJ-LiveSRRF, "liveSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
+Plugins>NanoJ-LiveSRRF, "LiveSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
 Plugins>NanoJ-LiveSRRF>Tools, "Reset stack for display", nanoj.liveSRRF.gui.SetStackForDisplay_
 Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
 Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinfo_
@@ -14,3 +14,4 @@ Plugins>NanoJ-LiveSRRF>Tools, "FHT interpolation", nanoj.liveSRRF.gui.FourierInt
 Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
 Plugins>NanoJ-LiveSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
 Plugins>NanoJ-LiveSRRF>Tools, "Estimate PSF size using integrated Gaussian", nanoj.liveSRRF.gui.EstimatePSFsize_
+Plugins>NanoJ-LiveSRRF>Tools, "Code tester", nanoj.liveSRRF.gui.CodeTester_
