Adding SSIM trace class: estimate time constant on a stack, non-verlapping blocking, smoothing and Sigma offset time estimation

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -12,3 +12,4 @@ Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Ex
 Plugins>NanoJ-LiveSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
 Plugins>NanoJ-LiveSRRF>Tools, "Estimate PSF size using integrated Gaussian", nanoj.liveSRRF.gui.EstimatePSFsize_
 Plugins>NanoJ-LiveSRRF>Tools, "Code tester", nanoj.liveSRRF.gui.CodeTester_
+Plugins>NanoJ-LiveSRRF>Tools, "Get SSIM trace", nanoj.liveSRRF.gui.SSIMtrace_
