--- a/src/plugins.config
+++ b/src/plugins.config
@@ -1,25 +1,25 @@
-Plugins>NanoJ-LiveSRRF, "liveSRRF", nanoj.liveSRRF.gui.LiveSRRF_optimised_
-Plugins>NanoJ-LiveSRRF, "liveSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
+Plugins>NanoJ-eSRRF, "eSRRF", nanoj.liveSRRF.gui.LiveSRRF_optimised_
+Plugins>NanoJ-eSRRF, "eSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
 
-Plugins>NanoJ-LiveSRRF>Tools, "-"
-Plugins>NanoJ-LiveSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinfo_
-Plugins>NanoJ-LiveSRRF>Tools, "-"
-Plugins>NanoJ-LiveSRRF>Tools, "Reset stack for display", nanoj.liveSRRF.gui.SetStackForDisplay_
-Plugins>NanoJ-LiveSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
-Plugins>NanoJ-LiveSRRF>Tools, "-"
-Plugins>NanoJ-LiveSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
-Plugins>NanoJ-LiveSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRRF.gui.RemoveMacroPixelArtefacts_
-Plugins>NanoJ-LiveSRRF>Tools, "Localisation density analysis", nanoj.liveSRRF.gui.NNAnalysis_
-Plugins>NanoJ-LiveSRRF>Tools, "- 3D LiveSRRF - "
-#Plugins>NanoJ-LiveSRRF>Tools, "Get focus positions from MFM data", nanoj.liveSRRF.gui.GetDefocus_
-Plugins>NanoJ-LiveSRRF>Tools, "Get spatial registration from MFM data", nanoj.liveSRRF.gui.GetSpatialCalibrationMFMdata_
-Plugins>NanoJ-LiveSRRF>Tools, "Apply spatial registration to MFM data", nanoj.liveSRRF.gui.ApplyCalibrationMFMdata_
-Plugins>NanoJ-LiveSRRF>Tools, "Calculate 3D FHT (OpenCL)", nanoj.liveSRRF.gui.Get3DFHT_
+Plugins>NanoJ-eSRRF>Tools, "-"
+Plugins>NanoJ-eSRRF>Tools, "Get OpenCL info", nanoj.liveSRRF.gui.GetOpenCLinfo_
+Plugins>NanoJ-eSRRF>Tools, "-"
+Plugins>NanoJ-eSRRF>Tools, "Reset stack for display", nanoj.liveSRRF.gui.SetStackForDisplay_
+Plugins>NanoJ-eSRRF>Tools, "Stack linear rescaling", nanoj.liveSRRF.gui.LinearRescaling_
+Plugins>NanoJ-eSRRF>Tools, "-"
+Plugins>NanoJ-eSRRF>Tools, "Simulate drift on stack", nanoj.liveSRRF.gui.SimulateDrift_
+Plugins>NanoJ-eSRRF>Tools, "Correct for macro-pixel artefacts", nanoj.liveSRRF.gui.RemoveMacroPixelArtefacts_
+Plugins>NanoJ-eSRRF>Tools, "Localisation density analysis", nanoj.liveSRRF.gui.NNAnalysis_
+Plugins>NanoJ-eSRRF>Tools, "- 3D LiveSRRF - "
+#Plugins>NanoJ-eSRRF>Tools, "Get focus positions from MFM data", nanoj.liveSRRF.gui.GetDefocus_
+Plugins>NanoJ-eSRRF>Tools, "Get spatial registration from MFM data", nanoj.liveSRRF.gui.GetSpatialCalibrationMFMdata_
+Plugins>NanoJ-eSRRF>Tools, "Apply spatial registration to MFM data", nanoj.liveSRRF.gui.ApplyCalibrationMFMdata_
+Plugins>NanoJ-eSRRF>Tools, "Calculate 3D FHT (OpenCL)", nanoj.liveSRRF.gui.Get3DFHT_
 
-#Plugins>NanoJ-LiveSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
+#Plugins>NanoJ-eSRRF, "Calculate Gain and Offset", nanoj.liveSRRF.gui.CalculateGainAndOffset_
 
 
-Plugins>NanoJ-LiveSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
-Plugins>NanoJ-LiveSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
-Plugins>NanoJ-LiveSRRF>Tools, "Code tester", nanoj.liveSRRF.gui.CodeTester_
-Plugins>NanoJ-LiveSRRF>Tools, "Estimate PSF size using integrated Gaussian", nanoj.liveSRRF.gui.EstimatePSFsize_
+Plugins>NanoJ-eSRRF>Tools, "Extract 3D PSF from stack", nanoj.liveSRRF.gui.Extract3D_PSF_
+Plugins>NanoJ-eSRRF>Tools, "Fluorescence simulator", nanoj.liveSRRF.gui.FluorescenceSimulator_
+Plugins>NanoJ-eSRRF>Tools, "Code tester", nanoj.liveSRRF.gui.CodeTester_
+Plugins>NanoJ-eSRRF>Tools, "Estimate PSF size using integrated Gaussian", nanoj.liveSRRF.gui.EstimatePSFsize_
