Refactoring F1 into QnR
Changing class names, variable names and plugin menu labels.
Also, in Parameter Sweep, changed RSP and RSE as being ON by default.

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -3,7 +3,7 @@ Plugins>NanoJ-eSRRF, "-"
 Plugins>NanoJ-eSRRF, "eSRRF - Estimate number of frames", nanoj.liveSRRF.gui.SSIMtrace_
 Plugins>NanoJ-eSRRF, "-"
 Plugins>NanoJ-eSRRF, "eSRRF - Parameters sweep", nanoj.liveSRRF.gui.ParametersSweep_
-Plugins>NanoJ-eSRRF, "eSRRF - Get F1 map from sweep output", nanoj.liveSRRF.gui.GetF1map_
+Plugins>NanoJ-eSRRF, "eSRRF - Get QnR map from sweep output", nanoj.liveSRRF.gui.GetQnRmap_
 Plugins>NanoJ-eSRRF, "-"
 Plugins>NanoJ-eSRRF, "eSRRF - Analysis", nanoj.liveSRRF.gui.LiveSRRF_optimised_
 Plugins>NanoJ-eSRRF, "-"
